[29] Fix header wrapping

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -66,7 +66,7 @@
 
 .header {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
   text-align: center;
 
